--- a/5.TEXT_SIM/.gitignore
+++ b/5.TEXT_SIM/.gitignore
@@ -1,3 +1,8 @@
+.ipynb_checkpoints/
+data/
+src/
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,6 +12,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+sh/
 .Python
 build/
 develop-eggs/
@@ -103,5 +109,5 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-.DS_Store
-.idea/
+data_in_test/
+sh/
