--- a/Dockerfile_cpu
+++ b/Dockerfile_cpu
@@ -28,7 +28,7 @@ RUN pip install konlpy cmake
 
 # RUN pip install gensim soynlp soyspacing bokeh networkx selenium lxml pyldavis sentencepiece
 
-COPY ../requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
 # RUN pip install numpy jupyter pandas html5lib seaborn matplotlib nltk tqdm transformers mxnet gluonnlp sklearn wordcloud
