--- a/Dockerfile_cpu
+++ b/Dockerfile_cpu
@@ -32,7 +32,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 RUN rm requirements.txt
 # RUN pip install numpy jupyter pandas html5lib seaborn matplotlib nltk tqdm transformers mxnet gluonnlp sklearn wordcloud
-RUN python -c 'import nltk; nltk.download("punkt"); nltk.download('stopwords')'
+RUN python -c 'import nltk; nltk.download("punkt"); nltk.download("stopwords")'
 
 # RUN jupyter notebook --generate-config --allow-root
 # RUN echo "c.NotebookApp.password = u'sha1:6a3f528eec40:6e896b6e4828f525a6e20e5411cd1c8075d68619'" >> /root/.jupyter/jupyter_notebook_config.py
