--- a/Dockerfile_cpu
+++ b/Dockerfile_cpu
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:2.0.1-py3
+FROM tensorflow/tensorflow:2.2.0
 MAINTAINER taekyoon <tgchoi03@gmail.com>
 
 RUN apt-get update -y \
