--- a/Dockerfile_gpu
+++ b/Dockerfile_gpu
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:2.0.1-gpu-py3
+FROM tensorflow/tensorflow:2.2.0-gpu
 MAINTAINER taekyoon <tgchoi03@gmail.com>
 
 RUN apt-get update -y \
