--- a/Dockerfile_cpu
+++ b/Dockerfile_cpu
@@ -21,9 +21,9 @@ RUN wget https://cmake.org/files/v3.14/cmake-3.14.3-Linux-x86_64.sh \
 RUN pip install --upgrade pip
 RUN pip install konlpy cmake
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-RUN rm requirements.txt
+COPY requirements_dkr.txt .
+RUN pip install -r requirements_dkr.txt
+RUN rm requirements_dkr.txt
 RUN python -c 'import nltk; nltk.download("punkt"); nltk.download("stopwords")'
 
 EXPOSE 8889
