--- a/Dockerfile_gpu
+++ b/Dockerfile_gpu
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:2.0.3-gpu
+FROM tensorflow/tensorflow:2.2.0-gpu
 MAINTAINER taekyoon <tgchoi03@gmail.com>
 
 RUN apt-get update -y \
@@ -21,9 +21,9 @@ RUN wget https://cmake.org/files/v3.14/cmake-3.14.3-Linux-x86_64.sh \
 RUN pip install --upgrade pip
 RUN pip install konlpy cmake
 
-COPY requirements_gpu.txt .
-RUN pip install -r requirements_gpu.txt
-RUN rm requirements_gpu.txt
+COPY requirements_dkr.txt .
+RUN pip install -r requirements_dkr.txt
+RUN rm requirements_dkr.txt
 RUN pip install setGPU
 RUN python -c 'import nltk; nltk.download("punkt"); nltk.download("stopwords")'
 
