--- a/requirements_dkr.txt
+++ b/requirements_dkr.txt
@@ -9,7 +9,7 @@ tqdm
 seqeval 
 transformers==3.0.2
 sentencepiece==0.1.85
-mxnet==1.6.0
+mxnet
 gluonnlp==0.9.1
 scikit-learn>=0.19.1    # package name registered in PyPI.org
 wordcloud
@@ -17,7 +17,6 @@ gensim
 xgboost
 wget==3.2
 tokenizers==0.8.1.rc1
-tensorflow-gpu==2.0.3
 h5py<3.0.0              # to avoid issue https://github.com/keras-team/keras/issues/14265
 konlpy
 beautifulsoup4
